--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@wppconnect-team/wppconnect": "^1.27.3",
     "firebase-admin": "^11.9.0",
+    "puppeteer": "^21.3.7",
     "readline-sync": "^1.4.10"
   }
 }
