--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "robo.js",
   "scripts": {
-    "start": "node ./src/robo.js",
+    "start": "npm install && node ./src/robo.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
